Remove support for RoR tenant in OAuth2 configuration (#740)
Consolidate RoR tenant authentication into Entur Partner tenant by using comma-separated audiences instead of maintaining separate OAuth2 resource server configurations. This simplifies the authentication setup while maintaining support for both API audiences.

Changes:
- Removed separate RoR auth0 configuration from Helm values files (dev, prd, tst)
- Consolidated RoR audience into partner audience as comma-separated values
- Removed RoR-specific OAuth2 resource server properties from configmap and test configuration
- Updated MardukWebSecurityConfiguration to accept comma-separated audiences and removed RoR-specific parameters

This follows the same approach used in entur/baba#651.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-authored-by: Claude <noreply@anthropic.com>